*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.27 ===
* Implemented OpenGL drawing surface supporf for X11 protocol. Can be disabled
  by setting LSP_WS_LIB_GLXSURFACE=off environment variable.
* Optimized surface drawing and sizing algorithm.
* Rendering optimizations in widget containers.
* Removed outdated RackEars widget.
* Updated widget drawing code to match new interface of ws::IGradient.

=== 1.0.26 ===
* Removed internal key auto-repeat simulation for tk::ListBox.
* Updated text clipping algorithm for tk::Button.
* Fixed bun in tk::ListBox widget which didn't allow to scroll the list box
  when using keyboard keys.
* Implemented TabGroup widget.
* Implemented shortcut handling mechancs by tk::Window.
* Small bugfix in LedMeterChannel related to header display.
* Added maximum amplitude property to AudioChannel and AudioSample.
* Added possibility to draw background around tk::GraphText widget.
* Fixed stylesheets: keeping the order of properties same to the order in the XML
  document when stylesheet is applied to styles.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.25 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.24 ===
* Improved ListBox behaviour relative to the item size.
* Bugfixes in tk::ListBox related to item creation, deletion and selection.
* Added text estimation suppot for tk::Button widget. 
* Added aggregate size computation (enabled by default) for tk::TabControl widget.
* Fixed bug in bookmak editor (set first/last actions) of the tk::FileDialog widget.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.23 ===
* Added header support by tk::LedMeterChannel.
* Added header support by tk::LedMeter.
* Implemented SLOT_MOUSE_POINTER slot for overriding mouse pointer.
* Updated build scripts.