@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2025 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2025 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-tk-lib
  * Created on: 10 июл. 2017 г.
@@ -41,6 +41,15 @@ namespace lsp
                 prop::Color         sTipColor;
                 prop::Color         sBalanceTipColor;
                 prop::Color         sMeterColor;
+
+                prop::Color         sInactiveColor;
+                prop::Color         sInactiveScaleColor;
+                prop::Color         sInactiveBalanceColor;
+                prop::Color         sInactiveHoleColor;
+                prop::Color         sInactiveTipColor;
+                prop::Color         sInactiveBalanceTipColor;
+                prop::Color         sInactiveMeterColor;
+
                 prop::SizeRange     sSizeRange;
                 prop::Float         sScale;
                 prop::RangeFloat    sValue;
@@ -55,6 +64,7 @@ namespace lsp
                 prop::Boolean       sScaleActive;
                 prop::Boolean       sMeterActive;
                 prop::Boolean       sEditable;
+                prop::Boolean       sActive;
                 prop::Integer       sHoleSize;
                 prop::Integer       sGapSize;
                 prop::Float         sScaleBrightness;
@@ -69,10 +79,6 @@ namespace lsp
             public:
                 static const w_class_t    metadata;
 
-            private:
-                Knob & operator = (const Knob &);
-                Knob(const Knob &);
-
             protected:
                 enum state_t
                 {
@@ -81,21 +87,30 @@ namespace lsp
                     S_CLICK
                 };
 
+                typedef struct colors_t
+                {
+                    prop::Color         sColor;
+                    prop::Color         sScaleColor;
+                    prop::Color         sBalanceColor;
+                    prop::Color         sHoleColor;
+                    prop::Color         sTipColor;
+                    prop::Color         sBalanceTipColor;
+                    prop::Color         sMeterColor;
+
+                    colors_t(tk::prop::Listener * listener);
+                    bool                property_changed(tk::Property * prop);
+                } colors_t;
+
             protected:
                 ssize_t             nLastY;
                 size_t              nState;
                 size_t              nButtons;
 
-                prop::Color         sColor;
-                prop::Color         sScaleColor;
-                prop::Color         sBalanceColor;
-                prop::Color         sHoleColor;
-                prop::Color         sTipColor;
-                prop::Color         sBalanceTipColor;
-                prop::Color         sMeterColor;
+                colors_t            sSActive;
+                colors_t            sSInactive;
+
                 prop::SizeRange     sSizeRange;
                 prop::Float         sScale;
-
                 prop::RangeFloat    sValue;
                 prop::StepFloat     sStep;
                 prop::Float         sBalance;
@@ -108,6 +123,7 @@ namespace lsp
                 prop::Boolean       sScaleActive;
                 prop::Boolean       sMeterActive;
                 prop::Boolean       sEditable;
+                prop::Boolean       sActive;
                 prop::Integer       sHoleSize;
                 prop::Integer       sGapSize;
                 prop::Float         sScaleBrightness;
@@ -131,18 +147,32 @@ namespace lsp
 
             public:
                 explicit Knob(Display *dpy);
+                Knob(const Knob &) = delete;
+                Knob(Knob &&) = delete;
                 virtual ~Knob() override;
+
+                Knob & operator = (const Knob &) = delete;
+                Knob & operator = (Knob &&) = delete;
 
                 virtual status_t                init() override;
 
             public:
-                LSP_TK_PROPERTY(Color,              color,                      &sColor)
-                LSP_TK_PROPERTY(Color,              scale_color,                &sScaleColor)
-                LSP_TK_PROPERTY(Color,              balance_color,              &sBalanceColor)
-                LSP_TK_PROPERTY(Color,              hole_color,                 &sHoleColor)
-                LSP_TK_PROPERTY(Color,              tip_color,                  &sTipColor)
-                LSP_TK_PROPERTY(Color,              balance_tip_color,          &sBalanceTipColor)
-                LSP_TK_PROPERTY(Color,              meter_color,                &sMeterColor)
+                LSP_TK_PROPERTY(Color,              color,                      &sSActive.sColor)
+                LSP_TK_PROPERTY(Color,              scale_color,                &sSActive.sScaleColor)
+                LSP_TK_PROPERTY(Color,              balance_color,              &sSActive.sBalanceColor)
+                LSP_TK_PROPERTY(Color,              hole_color,                 &sSActive.sHoleColor)
+                LSP_TK_PROPERTY(Color,              tip_color,                  &sSActive.sTipColor)
+                LSP_TK_PROPERTY(Color,              balance_tip_color,          &sSActive.sBalanceTipColor)
+                LSP_TK_PROPERTY(Color,              meter_color,                &sSActive.sMeterColor)
+
+                LSP_TK_PROPERTY(Color,              inactive_color,             &sSInactive.sColor)
+                LSP_TK_PROPERTY(Color,              inactive_scale_color,       &sSInactive.sScaleColor)
+                LSP_TK_PROPERTY(Color,              inactive_balance_color,     &sSInactive.sBalanceColor)
+                LSP_TK_PROPERTY(Color,              inactive_hole_color,        &sSInactive.sHoleColor)
+                LSP_TK_PROPERTY(Color,              inactive_tip_color,         &sSInactive.sTipColor)
+                LSP_TK_PROPERTY(Color,              inactive_balance_tip_color, &sSInactive.sBalanceTipColor)
+                LSP_TK_PROPERTY(Color,              inactive_meter_color,       &sSInactive.sMeterColor)
+
                 LSP_TK_PROPERTY(SizeRange,          size,                       &sSizeRange)
                 LSP_TK_PROPERTY(Float,              scale,                      &sScale)
                 LSP_TK_PROPERTY(RangeFloat,         value,                      &sValue)
@@ -157,6 +187,7 @@ namespace lsp
                 LSP_TK_PROPERTY(Boolean,            scale_active,               &sScaleActive)
                 LSP_TK_PROPERTY(Boolean,            meter_active,               &sMeterActive)
                 LSP_TK_PROPERTY(Boolean,            editable,                   &sEditable)
+                LSP_TK_PROPERTY(Boolean,            active,                     &sActive)
                 LSP_TK_PROPERTY(Integer,            hole_size,                  &sHoleSize)
                 LSP_TK_PROPERTY(Integer,            gap_size,                   &sGapSize)
                 LSP_TK_PROPERTY(Float,              scale_brightness,           &sScaleBrightness)
