@@ -5,6 +5,7 @@
 === 1.0.27 ===
 * Implemented OpenGL drawing surface supporf for X11 protocol. Can be disabled
   by setting LSP_WS_LIB_GLXSURFACE=off environment variable.
+* Added inactive state and colors to tk::Knob.
 * Optimized surface drawing and sizing algorithm.
 * Rendering optimizations in widget containers.
 * Removed outdated RackEars widget.
